--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
   margin: 0 auto;
   width: 960px;
   background-color: red;
+  border-radius: 5px;
 }
 
 .banner {
@@ -26,6 +27,9 @@ body {
 }
 .mainField {
   border-radius: 10px;
+  margin: 0 auto;
+  padding: 20px;
+  width: 500px;
 }
 .playerFields {
   background-color: rgba(255, 255, 255, 0.5);
@@ -39,6 +43,11 @@ body {
   padding: 24px;
   width:40%;
   border-radius: 10px;
+}
+.discardPile .card {
+  color: green;
+  margin: 10 auto;
+
 }
 .card {
   width: 80px;
